--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A system to add an authentication layer to an application",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=production node app.js",
+    "build": "export NODE_ENV=production",
+    "start": "node ./src/app.js"
   },
   "repository": {
     "type": "git",
@@ -17,10 +19,13 @@
   },
   "homepage": "https://github.com/sechols223/SEAuth#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
-    "mongoose": "^6.3.1"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.1",
+    "nodemailer": "^6.7.3"
   }
 }
