--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "NODE_ENV=production node app.js",
-    "build": "export NODE_ENV=production",
+    "build": "export NODE_ENV=production node /src/app.js",
     "start": "node ./src/app.js"
   },
   "repository": {
