--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "node": "17.x"
   },
   "scripts": {
-    "test": "NODE_ENV=production node app.js",
-    "build": "export NODE_ENV=production node /src/app.js",
+    "test": "NODE_ENV=development node app.js",
+    "build": "NODE_ENV=production node /src/app.js",
     "start": "node ./src/app.js"
   },
   "repository": {
