--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "NODE_ENV=development node app.js",
-    "build": "NODE_ENV=production node app.js",
+    "build": "NODE_ENV=production node .",
     "start": "node app.js"
   },
   "repository": {
