--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "NODE_ENV=development node app.js",
     "build": "NODE_ENV=production node .",
-    "start": "node app.js"
+    "start": "node ."
   },
   "repository": {
     "type": "git",
